# poly-tag-rocket

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
src/: config.rs  db.rs  dto.rs  fairings.rs  guards.rs  logger.rs  main.rs  routes.rs  services.rs  test.rs
src/config/: default.json  default.toml  default.yaml
src/db/: models.rs  schema.rs
src/db/migrations/2024-01-28-163855_create_collections/: up.sql
src/db/migrations/2024-01-28-165221_create_files/: up.sql
src/db/migrations/2024-01-28-165445_create_collection_file_pairs/: up.sql
src/db/migrations/2024-03-09-094455_create_users/: up.sql
src/db/migrations/2024-03-09-094457_create_user_sessions/: up.sql
src/db/migrations/2024-03-11-154321_create_staging_files/: down.sql  up.sql
src/db/migrations/2024-03-31-063601_create_tags/: up.sql
src/fairings/: initial_user_creator.rs  staging_file_remover.rs
src/routes/: file.rs
src/routes/collection/: controllers.rs  dto.rs  tests.rs
src/routes/file/: controllers.rs  dto.rs  tests.rs
src/routes/staging_file/: controllers.rs  dto.rs  tests.rs
src/routes/tag/: controllers.rs
src/routes/user/: controllers.rs  dto.rs  tests.rs
src/routes/user_session/: controllers.rs  dto.rs  tests.rs
src/services/: auth_service.rs  collection_file_pair_service.rs  collection_service.rs  file_driver.rs  file_service.rs  metric_service.rs  password_service.rs  search_service.rs  staging_file_service.rs  tag_service.rs  user_service.rs
src/services/file_driver/: local_file_system.rs
src/services/file_service/: compute_file_hash.rs  compute_file_mime.rs
