[package]
name = "poly-tag"
description = "a file service that allows users to manage their files by tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = { version = "0.1" }
base64 = { version = "0.22" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4" }
const_format = { version = "0.2" }
crc32fast = { version = "1", features = ["nightly"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2", features = ["postgres"] }
either = { version = "1" }
env_logger = { version = "0.11", features = ["unstable-kv"] }
figment = { version = "0.10", features = ["toml", "yaml", "json"] }
infer = { version = "0.15" }
log = { version = "0.4", features = [
    "kv_std",
    "kv_serde",
    "release_max_level_info",
] }
meilisearch-sdk = { version = "0.25" }
mime_guess = { version = "2" }
parking_lot = { version = "0.12", features = [
    "hardware-lock-elision",
    "nightly",
] }
rocket = { version = "0.5", features = ["json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = [
    "io",
    "futures-io",
    "futures-util",
] }
utoipa = { version = "4", features = ["rocket_extras", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
